--- a/pages/sample/countdown.html
+++ b/pages/sample/countdown.html
@@ -1,5 +1,5 @@
 ﻿---
-title: Countdown
+title: Countdown Timer
 landing: Components
 layout: components.njk
 permalink: "sample/countdown.html"
@@ -27,7 +27,7 @@ permalink: "sample/countdown.html"
 </style>
 
 
-<h1 class="mt-lg-0">Countdown</h1>
+<h1 class="mt-lg-0">Countdown timer</h1>
 
 <p>The countdown timer component helps visitors visualize the counting toward or away from a fixed point in time. </p>
 <p>Time intervals displayed by the countdown timer can include:</p>
@@ -319,7 +319,7 @@ permalink: "sample/countdown.html"
 <h3>How not to use it</h3>
 
 <p>Try not to use months in your countdown as they present a fluctuating metric of time. </p>
-
+<p>Avoid excessive timeframes (more than 1 year) as this renders the countdown useless to visitors.</p>
 
 <h2 id="Accessibility">Accessibility</h2>
 {% include "../../src/_includes/modules/accessibility.html" %}
