added tags to icons JSON #341

--- a/pages/sample/colorscheme-delta.html
+++ b/pages/sample/colorscheme-delta.html
@@ -79,7 +79,7 @@ colorscheme: "/css/colorscheme-delta.css"
     </div>
     <div class="quarter">
      <div class="outer m-auto width-80">
-      <div class="height-80 shadow" style="border:1px solid #dfd8d8;background-color:#eeeaea;">
+      <div class="height-80 shadow" style="border:1px solid #dfd8d8;background-color:#f5f9fa;">
        <div class="color" style="background-color:#f5f9fa;"></div>
       </div>
      </div>
