--- a/pages/sample/colorscheme-pasorobles.html
+++ b/pages/sample/colorscheme-pasorobles.html
@@ -78,7 +78,7 @@ colorscheme: "/css/colorscheme-pasorobles.css"
     </div>
     <div class="quarter">
      <div class="outer m-auto width-80">
-      <div class="height-80 shadow" style="border:1px solid #d1cdcd;background-color:#e9e8e8;">
+      <div class="height-80 shadow" style="border:1px solid #d1cdcd;background-color:#f5f5f5;">
        <div class="color" style="background-color:#f5f5f5;"></div>
       </div>
      </div>
