--- a/pages/sample/colorscheme-sacramento.html
+++ b/pages/sample/colorscheme-sacramento.html
@@ -78,7 +78,7 @@ colorscheme: "/css/colorscheme-sacramento.css"
     </div>
     <div class="quarter">
      <div class="outer m-auto width-80">
-      <div class="height-80 shadow" style="border:1px solid #BBBBBB;background-color:#DADADA;">
+      <div class="height-80 shadow" style="border:1px solid #BBBBBB;background-color:#e1ecf7;">
        <div class="color" style="background-color:#e1ecf7;"></div>
       </div>
      </div>
