--- a/pages/sample/color-schemes.html
+++ b/pages/sample/color-schemes.html
@@ -29,7 +29,7 @@ permalink: "visual-design/color-schemes.html"
    </ul>
   </nav>
  </div>
- <div class="col-md-9">
+ <div class="col-md-9 p-b-lg">
 
 
   <h1 class="mt-lg-0">State Web Template Color Schemes</h1>
@@ -94,9 +94,9 @@ permalink: "visual-design/color-schemes.html"
       </div>
       <div class="text-center">
        <div class="height-60 width-60 rounded-50 m-x-auto m-b-sm brd-solid-1 brd-gray-light shadow-sm"
-        style="background-color: #f9f8f8;"></div>
+        style="background-color: #f9f4f0;"></div>
        <span class="font-size-14 d-block line-height-1em">Secondary</span><span
-        class="font-size-sm line-height-1em">#f9f8f8</span>
+        class="font-size-sm line-height-1em">#f9f4f0</span>
       </div>
 
      </div>
@@ -131,9 +131,9 @@ permalink: "visual-design/color-schemes.html"
       </div>
       <div class="text-center">
        <div class="height-60 width-60 rounded-50 m-x-auto m-b-sm brd-solid-1 brd-gray-light shadow-sm"
-        style="background-color: #f4f3ef;"></div>
+        style="background-color: #ededef;"></div>
        <span class="font-size-14 d-block line-height-1em">Secondary</span><span
-        class="font-size-sm line-height-1em">#f4f3ef</span>
+        class="font-size-sm line-height-1em">#ededef</span>
       </div>
 
      </div>
@@ -162,9 +162,9 @@ permalink: "visual-design/color-schemes.html"
       </div>
       <div class="text-center">
        <div class="height-60 width-60 rounded-50 m-x-auto m-b-sm brd-solid-1 brd-gray-light shadow-sm"
-        style="background-color: #E1F2F7;"></div>
+        style="background-color: #eef8fb;"></div>
        <span class="font-size-14 d-block line-height-1em">Secondary</span><span
-        class="font-size-sm line-height-1em">#E1F2F7</span>
+        class="font-size-sm line-height-1em">#eef8fb</span>
       </div>
 
      </div>
@@ -198,9 +198,9 @@ permalink: "visual-design/color-schemes.html"
       </div>
       <div class="text-center">
        <div class="height-60 width-60 rounded-50 m-x-auto m-b-sm brd-solid-1 brd-gray-light shadow-sm"
-        style="background-color: #f1ede4;"></div>
+        style="background-color: #fbf0e7;"></div>
        <span class="font-size-14 d-block line-height-1em">Secondary</span><span
-        class="font-size-sm line-height-1em">#f1ede4</span>
+        class="font-size-sm line-height-1em">#fbf0e7</span>
       </div>
      </div>
     </a>
@@ -293,9 +293,9 @@ permalink: "visual-design/color-schemes.html"
       </div>
       <div class="text-center">
        <div class="height-60 width-60 rounded-50 m-x-auto m-b-sm brd-solid-1 brd-gray-light shadow-sm"
-        style="background-color: #FFEBD7;"></div>
+        style="background-color: #f8eee4;"></div>
        <span class="font-size-14 d-block line-height-1em">Secondary</span><span
-        class="font-size-sm line-height-1em">#FFEBD7</span>
+        class="font-size-sm line-height-1em">#f8eee4</span>
       </div>
      </div>
     </a>
@@ -328,9 +328,9 @@ permalink: "visual-design/color-schemes.html"
       </div>
       <div class="text-center">
        <div class="height-60 width-60 rounded-50 m-x-auto m-b-sm brd-solid-1 brd-gray-light shadow-sm"
-        style="background-color: #E1ECF7;"></div>
+        style="background-color: #eff4fa;"></div>
        <span class="font-size-14 d-block line-height-1em">Secondary</span><span
-        class="font-size-sm line-height-1em">#E1ECF7</span>
+        class="font-size-sm line-height-1em">#eff4fa</span>
       </div>
      </div>
     </a>
@@ -358,9 +358,9 @@ permalink: "visual-design/color-schemes.html"
       </div>
       <div class="text-center">
        <div class="height-60 width-60 rounded-50 m-x-auto m-b-sm brd-solid-1 brd-gray-light shadow-sm"
-        style="background-color: #effaf6;"></div>
+        style="background-color: #e4f1e5;"></div>
        <span class="font-size-14 d-block line-height-1em">Secondary</span><span
-        class="font-size-sm line-height-1em">#effaf6</span>
+        class="font-size-sm line-height-1em">#e4f1e5</span>
       </div>
      </div>
     </a>
@@ -393,9 +393,9 @@ permalink: "visual-design/color-schemes.html"
       </div>
       <div class="text-center">
        <div class="height-60 width-60 rounded-50 m-x-auto m-b-sm brd-solid-1 brd-gray-light shadow-sm"
-        style="background-color: #effaf6;"></div>
+        style="background-color: #e8f1ee;"></div>
        <span class="font-size-14 d-block line-height-1em">Secondary</span><span
-        class="font-size-sm line-height-1em">#effaf6</span>
+        class="font-size-sm line-height-1em">#e8f1ee</span>
       </div>
      </div>
     </a>
@@ -423,9 +423,9 @@ permalink: "visual-design/color-schemes.html"
       </div>
       <div class="text-center">
        <div class="height-60 width-60 rounded-50 m-x-auto m-b-sm brd-solid-1 brd-gray-light shadow-sm"
-        style="background-color: #f9f8f8;"></div>
+        style="background-color: #eff5f8;"></div>
        <span class="font-size-14 d-block line-height-1em">Secondary</span><span
-        class="font-size-sm line-height-1em">#f9f8f8</span>
+        class="font-size-sm line-height-1em">#eff5f8</span>
       </div>
      </div>
     </a>
