--- a/pages/sample/colorscheme-trinity.html
+++ b/pages/sample/colorscheme-trinity.html
@@ -77,12 +77,12 @@ colorscheme: "/css/colorscheme-trinity.css"
     </div>
     <div class="quarter">
      <div class="outer m-auto width-80">
-      <div class="height-80 shadow" style="border:1px solid #dfd8d8;background-color:#eeeaea;">
-       <div class="color" style="background-color:#f9f8f8;"></div>
+      <div class="height-80 shadow" style="border:1px solid #dfd8d8;background-color:#eff5f8;">
+       <div class="color" style="background-color:#eff5f8;"></div>
       </div>
      </div>
      <div class="caption">
-      <h3 class="h4">.color-s1<br />@color-s1</h3>HEX: #f9f8f8<br />RGB: 249,248,248
+      <h3 class="h4">.color-s1<br />@color-s1</h3>HEX: #eff5f8<br />RGB: 249,248,248
      </div>
     </div>
    </div>
